# Server

./: CMakeLists.txt  README.md  StringDatabasePath.txt  StringLocalIpAddressForServer.txt  config.h.in  main.cpp  messages_db.accdb  messagesdb.cpp  messagesdb.h  res.rc  servermodel.cpp  servermodel.h  serverview.cpp  serverview.h  serverviewmodel.cpp  serverviewmodel.h
GUI/: BottomItem.qml  ButtonSendMessage.qml  ButtonServerStart.qml  ButtonTemplate.qml  InputMessage.qml  InputText.qml  InputTextPortServer.qml  LabelsText.qml  LabelsTextForDelegate.qml  LightConnected.qml  ListViewClients.qml  ListViewDelegate.qml  ListViewMessages.qml  ListViewTemplate.qml  ServerFuncs.js  ServerWindow.qml  TopItem.qml  functions.js
